Fix to expand context menu so Standard Download is visible

--- a/css/style.css
+++ b/css/style.css
@@ -17149,7 +17149,7 @@ strong, b {
 	background-position: 0 -1000px;
 }
 .context-submenu {
-	max-width: 190px;/*margin-top: -40px;*//*top: auto;*/
+	max-width: 215px;
 }
 .context-submenu .context-menu-item {
 	width: 100%;
